--- a/about.html
+++ b/about.html
@@ -37,7 +37,13 @@
             </ul>
           </li>
 
-          <li><a href="booking.html">Book Now</a></li>
+          <li class="dropdown"><a href="booking.html"><span>Booking</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="booking.html">Book Now</a></li>
+              <li><a href="checkBooking.html">Check Booking</a></li>
+            </ul>
+          </li>
+          
           <li><a href="contact.html">Contact</a></li>
           <li class="dropdown"><a href="login.html"><span>Member</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -76,97 +82,97 @@
     </section>
   </main>
 
-    <main id="main">
+  <main id="main">
 
-      <section id="about-us" class="about-us bg-dark" style="color: white;">
-        <div class="container" data-aos="fade-up">
-  
-          <div class="row content">
-            <div class="col-lg-6" data-aos="fade-right">
-              <h2>With <span style="color:#1bbd36;">ONWAYS</span></h2>
-              <h3>Journey Beyond The Ordinary!</h3>
-            </div>
-            <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
-              <p>
-                Welcome to Onways where we help you plan and book your dream vacations! With years of experience in travel
-                industry, we have the expertise and resources to create unforgetable travel experiences for our clients.
-              </p>
-              <ul>
-                <li><i class="ri-check-double-line"></i> With best hospitality around the globe.</li>
-                <li><i class="ri-check-double-line"></i> With over 25 beautiful destinations.</li>
-                <li><i class="ri-check-double-line"></i> Explore more, Worry less.</li>
-              </ul>
-              <p class="fst-italic">
-                Thank you for considering our travel agency for your next adventure. We look forward to helping you create
-                memories that will last a life time.
-              </p>
-            </div>
-          </div>
-  
-        </div>
-      </section>
+    <section id="about-us" class="about-us bg-dark" style="color: white;">
+      <div class="container" data-aos="fade-up">
 
-      <section id="clients" class="clients">
-        <div class="container" data-aos="fade-up">
-  
-          <div class="section-title">
-            <h2>Travel partners</h2>
+        <div class="row content">
+          <div class="col-lg-6" data-aos="fade-right">
+            <h2>With <span style="color:#1bbd36;">ONWAYS</span></h2>
+            <h3>Journey Beyond The Ordinary!</h3>
           </div>
-  
-          <div class="row no-gutters clients-wrap clearfix" data-aos="fade-up">
-  
-            <div class="col-lg-3 col-md-4 col-6">
-              <div class="client-logo">
-                <img src="media/airline logos/Emirates.png" class="img-fluid" alt="" >
-              </div>
-            </div>
-  
-            <div class="col-lg-3 col-md-4 col-6">
-              <div class="client-logo">
-                <img src="media/airline logos/Etihad_Airways.png" class="img-fluid" alt="">
-              </div>
-            </div>
-  
-            <div class="col-lg-3 col-md-4 col-6">
-              <div class="client-logo">
-                <img src="media/airline logos/Qatar_Airways.png" class="img-fluid" alt="">
-              </div>
-            </div>
-  
-            <div class="col-lg-3 col-md-4 col-6">
-              <div class="client-logo">
-                <img src="media/airline logos/PIA.png" class="img-fluid" alt="">
-              </div>
-            </div>
-  
-            <div class="col-lg-3 col-md-4 col-6">
-              <div class="client-logo">
-                <img src="media/airline logos/Gulf_Air.png" class="img-fluid" alt="">
-              </div>
-            </div>
-  
-            <div class="col-lg-3 col-md-4 col-6">
-              <div class="client-logo">
-                <img src="media/airline logos/British_airways.png" class="img-fluid" alt="">
-              </div>
-            </div>
-  
-            <div class="col-lg-3 col-md-4 col-6">
-              <div class="client-logo">
-                <img src="media/airline logos/Flydubai.png" class="img-fluid" alt="">
-              </div>
-            </div>
-  
-            <div class="col-lg-3 col-md-4 col-6">
-              <div class="client-logo">
-                <img src="media/airline logos/Air_Arabia.png" class="img-fluid" alt="">
-              </div>
-            </div>
-  
+          <div class="col-lg-6 pt-4 pt-lg-0" data-aos="fade-left">
+            <p>
+              Welcome to Onways where we help you plan and book your dream vacations! With years of experience in travel
+              industry, we have the expertise and resources to create unforgetable travel experiences for our clients.
+            </p>
+            <ul>
+              <li><i class="ri-check-double-line"></i> With best hospitality around the globe.</li>
+              <li><i class="ri-check-double-line"></i> With over 25 beautiful destinations.</li>
+              <li><i class="ri-check-double-line"></i> Explore more, Worry less.</li>
+            </ul>
+            <p class="fst-italic">
+              Thank you for considering our travel agency for your next adventure. We look forward to helping you create
+              memories that will last a life time.
+            </p>
           </div>
-  
         </div>
-      </section>
+
+      </div>
+    </section>
+
+    <section id="clients" class="clients">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>Travel partners</h2>
+        </div>
+
+        <div class="row no-gutters clients-wrap clearfix" data-aos="fade-up">
+
+          <div class="col-lg-3 col-md-4 col-6">
+            <div class="client-logo">
+              <img src="media/airline logos/Emirates.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6">
+            <div class="client-logo">
+              <img src="media/airline logos/Etihad_Airways.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6">
+            <div class="client-logo">
+              <img src="media/airline logos/Qatar_Airways.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6">
+            <div class="client-logo">
+              <img src="media/airline logos/PIA.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6">
+            <div class="client-logo">
+              <img src="media/airline logos/Gulf_Air.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6">
+            <div class="client-logo">
+              <img src="media/airline logos/British_airways.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6">
+            <div class="client-logo">
+              <img src="media/airline logos/Flydubai.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4 col-6">
+            <div class="client-logo">
+              <img src="media/airline logos/Air_Arabia.png" class="img-fluid" alt="">
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section>
 
     <section id="testimonials" class="testimonials section-bg bg-dark">
       <div class="container">
@@ -180,7 +186,8 @@
               <h3>Saul Goodman</h3>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                As a frequent traveler, I have high expectations when it comes to travel agencies, and this one exceeded them all. From the moment we contacted them, they were responsive, professional, and easy to work with.
+                As a frequent traveler, I have high expectations when it comes to travel agencies, and this one exceeded
+                them all. From the moment we contacted them, they were responsive, professional, and easy to work with.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -191,7 +198,8 @@
               <h3>Sara Wilsson</h3>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                Our family had a fantastic experience working with this travel agency. They helped us plan a multi-generational trip that catered to everyone's interests and needs.
+                Our family had a fantastic experience working with this travel agency. They helped us plan a
+                multi-generational trip that catered to everyone's interests and needs.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -202,7 +210,8 @@
               <h3>Jena Karlis</h3>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                The team at this agency took care of everything, from flights to accommodations to activities, and made sure that every aspect of our trip was taken care of.
+                The team at this agency took care of everything, from flights to accommodations to activities, and made
+                sure that every aspect of our trip was taken care of.
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -213,7 +222,8 @@
               <h3>Matt Brandon</h3>
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                I have used many travel agencies over the years, but none have compared to the level of service provided by this agency. We will definitely be booking with them again in the future!
+                I have used many travel agencies over the years, but none have compared to the level of service provided
+                by this agency. We will definitely be booking with them again in the future!
                 <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
             </div>
@@ -278,7 +288,8 @@
       </div>
   </footer>
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
