--- a/checkBooking.html
+++ b/checkBooking.html
@@ -22,7 +22,7 @@
     <header id="header" class="fixed-top">
         <div class="container d-flex align-items-center">
 
-            <h1 class="logo me-auto"><a href="home.html"><span>OnWays</span> Travels</a></h1>
+            <h1 class="logo me-auto"><a href="home.html" style="font-size: 26px;"><span>OnWays</span> Travels</a></h1>
 
             <nav id="navbar" class="navbar order-last order-lg-0">
                 <ul>
@@ -70,7 +70,7 @@
     <main id="main">
         <section>
             <div class="limiter">
-                <div class="container-login100" style="background-image: url('media/planebg.jpg'); padding: 0px;">
+                <div class="container-login100" style="background-image: url('media/planebg.jpg'); padding: 0px; background-size: cover;">
                     <div class="wrap-login100 p-5" data-aos="fade-up">
                         <form class="login100-form" method="POST" action="/ONWaysTravels/checkBooking.php">
                             <span class="login100-form-title pb-5" style="color: white;">
