--- a/home.html
+++ b/home.html
@@ -39,7 +39,13 @@
             </ul>
           </li>
 
-          <li><a href="booking.html">Book Now</a></li>
+          <li class="dropdown"><a href="booking.html"><span>Booking</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="booking.html">Book Now</a></li>
+              <li><a href="checkBooking.html">Check Booking</a></li>
+            </ul>
+          </li>
+          
           <li><a href="contact.html">Contact</a></li>
           <li class="dropdown"><a href="login.html"><span>Member</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -112,7 +118,7 @@
             <h3>Journey Beyond The Ordinary!</h3>
           </div>
 
-          <div class="col-lg-6 data-aos="fade-left">
+          <div class="col-lg-6 data-aos=" fade-left">
             <p>
               Welcome to Onways where we help you plan and book your dream vacations! With years of experience in travel
               industry, we have the expertise and resources to create unforgetable travel experiences for our clients.
