--- a/login.html
+++ b/login.html
@@ -37,7 +37,13 @@
 						</ul>
 					</li>
 
-					<li><a href="booking.html">Book Now</a></li>
+					<li class="dropdown"><a href="booking.html"><span>Booking</span> <i
+								class="bi bi-chevron-down"></i></a>
+						<ul>
+							<li><a href="booking.html">Book Now</a></li>
+							<li><a href="checkBooking.html">Check Booking</a></li>
+						</ul>
+					</li>
 					<li><a href="contact.html">Contact</a></li>
 					<li class="dropdown"><a href="login.html" class="active"><span>Member</span> <i
 								class="bi bi-chevron-down"></i></a>
@@ -70,12 +76,14 @@
 					</span>
 
 					<div class="wrap-input100 mb-4" data-validate="Please enter username">
-						<input class="input100" type="text" name="username" id="username" placeholder="Username" required>
+						<input class="input100" type="text" name="username" id="username" placeholder="Username"
+							required>
 						<span class="focus-input100"></span>
 					</div>
 
 					<div class="wrap-input100 mb-4" data-validate="Please enter password">
-						<input class="input100" type="password" name="password" placeholder="Password" id="password" required>
+						<input class="input100" type="password" name="password" placeholder="Password" id="password"
+							required>
 						<span class="focus-input100"></span>
 					</div>
 
