--- a/insurance.html
+++ b/insurance.html
@@ -37,7 +37,13 @@
                         </ul>
                     </li>
 
-                    <li><a href="booking.html">Book Now</a></li>
+                    <li class="dropdown"><a href="booking.html"><span>Booking</span> <i
+                                class="bi bi-chevron-down"></i></a>
+                        <ul>
+                            <li><a href="booking.html">Book Now</a></li>
+                            <li><a href="checkBooking.html">Check Booking</a></li>
+                        </ul>
+                    </li>
                     <li><a href="contact.html">Contact</a></li>
                     <li class="dropdown"><a href="login.html"><span>Member</span> <i class="bi bi-chevron-down"></i></a>
                         <ul>
