--- a/packages.html
+++ b/packages.html
@@ -39,7 +39,12 @@
             </ul>
           </li>
 
-          <li><a href="booking.html">Book Now</a></li>
+          <li class="dropdown"><a href="booking.html"><span>Booking</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="booking.html">Book Now</a></li>
+              <li><a href="checkBooking.html">Check Booking</a></li>
+            </ul>
+          </li>
           <li><a href="contact.html">Contact</a></li>
           <li class="dropdown"><a href="login.html"><span>Member</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
@@ -86,7 +91,7 @@
           </i>
         </span>
         Travel Packages
-      </h1> 
+      </h1>
 
       <div style="font-size: 20px;font-family:Arial, Helvetica, sans-serif;text-align: justify;" id="desc">
         <p class="pt-2 pb-3 p-3 text-light" data-aos="fade-right">
