--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" href="/media/favicon.png" />
 
-	
+
 	<link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
 	<link href="assets/vendor/aos/aos.css" rel="stylesheet">
 	<link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -37,7 +37,13 @@
 						</ul>
 					</li>
 
-					<li><a href="booking.html">Book Now</a></li>
+					<li class="dropdown"><a href="booking.html"><span>Booking</span> <i
+								class="bi bi-chevron-down"></i></a>
+						<ul>
+							<li><a href="booking.html">Book Now</a></li>
+							<li><a href="checkBooking.html">Check Booking</a></li>
+						</ul>
+					</li>
 					<li><a href="contact.html">Contact</a></li>
 					<li class="dropdown"><a href="login.html" class="active"><span>Member</span> <i
 								class="bi bi-chevron-down"></i></a>
@@ -75,13 +81,15 @@
 					</div>
 
 					<div class="wrap-input100  mb-4" data-validate="Please enter username">
-						<input class="input100" type="text" name="username" placeholder="Username" id="username" required>
+						<input class="input100" type="text" name="username" placeholder="Username" id="username"
+							required>
 						<span class="focus-input100"></span>
 					</div>
 
 
 					<div class="wrap-input100 mb-4" data-validate="Please enter password">
-						<input class="input100" type="password" name="password" placeholder="Password" id="password" required>
+						<input class="input100" type="password" name="password" placeholder="Password" id="password"
+							required>
 						<span class="focus-input100"></span>
 					</div>
 
