--- a/about.html
+++ b/about.html
@@ -23,11 +23,11 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="home.html"><span>OnWays</span> Travels</a></h1>
+      <h1 class="logo me-auto"><a href="index.html"><span>OnWays</span> Travels</a></h1>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html" class="active">About Us</a></li>
 
           <li class="dropdown"><a href="packages.html"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
@@ -73,7 +73,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>About</h2>
           <ol id="mobile-QuickNav">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li>About</li>
           </ol>
         </div>
@@ -255,7 +255,7 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="home.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="packages.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="privacy.html">Privacy policy</a></li>
