--- a/packages.html
+++ b/packages.html
@@ -24,11 +24,11 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="home.html"><span>OnWays</span> Travels</a></h1>
+      <h1 class="logo me-auto"><a href="index.html"><span>OnWays</span> Travels</a></h1>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="home.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
 
           <li class="dropdown"><a href="packages.html" class="active"><span>Services</span> <i
@@ -74,7 +74,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Services</h2>
           <ol id="mobile-QuickNav">
-            <li><a href="home.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li>Services</li>
             <li>Packages</li>
           </ol>
@@ -195,7 +195,7 @@
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="home.html">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="packages.html">Services</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="privacy.html">Privacy policy</a></li>
