--- a/signup.html
+++ b/signup.html
@@ -22,11 +22,11 @@
 	<header id="header" class="fixed-top">
 		<div class="container d-flex align-items-center">
 
-			<h1 class="logo me-auto"><a href="home.html" style="font-size: 28px;"><span>OnWays</span> Travels</a></h1>
+			<h1 class="logo me-auto"><a href="index.html" style="font-size: 28px;"><span>OnWays</span> Travels</a></h1>
 
 			<nav id="navbar" class="navbar order-last order-lg-0">
 				<ul>
-					<li><a href="home.html">Home</a></li>
+					<li><a href="index.html">Home</a></li>
 					<li><a href="about.html">About Us</a></li>
 
 					<li class="dropdown"><a href="packages.html"><span>Services</span> <i
@@ -141,7 +141,7 @@
 					<div class="col-lg-2 col-md-6 footer-links">
 						<h4>Useful Links</h4>
 						<ul>
-							<li><i class="bx bx-chevron-right"></i> <a href="home.html">Home</a></li>
+							<li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
 							<li><i class="bx bx-chevron-right"></i> <a href="about.html">About us</a></li>
 							<li><i class="bx bx-chevron-right"></i> <a href="packages.html">Services</a></li>
 							<li><i class="bx bx-chevron-right"></i> <a href="privacy.html">Privacy policy</a></li>
